# SDL_Smart_Sudoku

./: .gitignore  CMakeLists.txt  README.md  main.c  sdl_custom_lib.c  sdl_custom_lib.h
dependencies/include/SDL2/: SDL_assert.h  SDL_image.h  SDL_video.h  SDL_vulkan.h
grids/: grid0.txt  grid1.txt
grids/easy/: grid1.txt
grids/hard/: grid0.txt  grid1.txt
grids/normal/: grid0.txt  grid1.txt
sudoku_lib/: Print.c  Print.h  Rules.c  Rules.h  addRules.c  addRules.h  cellSelection.h  changeTitleMode.c  changeTitleMode.h  difficultyButton.c  difficultyButton.h  drawPencilMark.c  drawPencilMark.h  freeMemory.c  freeMemory.h  gameController.c  gameController.h  initRules.c  initRules.h  initializeSudoku.c  initializeSudoku.h  keyInterpretor.c  keyInterpretor.h  moveSelected.c  moveSelected.h  removeRules.c  removeRules.h  sdl_sudoku.c  sdl_sudoku.h  selectCell.c  selectCell.h  showRules.c  showRules.h  sudokuCell.c  sudokuCell.h  sudokuGrid.c  sudokuGrid.h  sudokuHover.c  sudokuHover.h  sudoku_cell.c  (+13 more)
